[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "togax-commonglos"
version = "0.1.0"
description = "Using common 'Liquid Glass' patterns with Toga iOS"
authors = [
    { name = "John Zhou", email = "johnzhou721@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johnzhou721/togax-commonglos"
Documentation = "https://github.com/johnzhou721/togax-commonglos#readme"
[tool.setuptools]
py-modules = ["togax_commonglos"]

